# STM32_modular_robot

./: .gitignore  ReadMe.md
app/: control_panel.py  requirements.txt
app/src/GUI/: main_window.py  widgets.py
app/src/datatypes/: definitions.py  serial_driver.py
extras/: LUT_table_gen.py  angle_generator.py  test.py
extras/bachelors/latex_files/: EE-dyplom.bib  EE-dyplom.cls  EE-dyplom.tex  appendices.tex  glossary.tex
extras/bachelors/latex_files/tekst/: main.tex  podsumowanie.tex  praktyka.tex  teoria.tex  wstep.tex
extras/bachelors/latex_files/temp/: notka.tex
extras/pyhelpers/: LUT_pixels.py
source/CAN_Networking/SW4STM32/STM32F769I_EVAL/: .cproject  .project  .project_org
source/NUCLEO-F446RE_Gizmo/: .cproject  .mxproject  .project  NUCLEO-F446RE_Gizmo Debug.launch  NUCLEO-F446RE_Gizmo.ioc
source/NUCLEO-F446RE_Gizmo/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
source/NUCLEO-F446RE_Gizmo/Core/Src/: can.c  gpio.c  i2c.c  main.c  rtc.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
source/NUCLEO-F446RE_Gizmo/Debug/: NUCLEO-F446RE_Gizmo.elf  NUCLEO-F446RE_Gizmo.list  NUCLEO-F446RE_Gizmo.map  makefile  objects.list  sources.mk
source/NUCLEO-F446RE_Gizmo/Debug/Core/Src/: can.cyclo  can.d  can.su  dma.d  gpio.d  i2c.d  main.cyclo  main.d  main.su  rtc.cyclo  rtc.d  rtc.su  sdio.cyclo  sdio.d  sdio.su  spi.cyclo  spi.d  spi.su  stm32f4xx_hal_msp.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d  usart.cyclo  usart.d  usart.su
source/NUCLEO-F446RE_Gizmo/Debug/Core/Startup/: subdir.mk
source/NUCLEO-F446RE_Gizmo/Debug/Drivers/Gizmo/Src/: ADXL345.cyclo  ADXL345.d  ADXL345.su  LCD_driver.cyclo  LCD_driver.d  LCD_driver.su  ST3020_servo.cyclo  ST3020_servo.d  ST3020_servo.su  sd_card.cyclo  sd_card.d  sd_card.su  subdir.mk  system_logic.cyclo  (+5 more)
source/NUCLEO-F446RE_Gizmo/Debug/FATFS/App/: fatfs.d  subdir.mk
source/NUCLEO-F446RE_Gizmo/Drivers/Gizmo/Inc/: ADXL345.h  LCD_driver.h  ST3020_servo.h  error_codes.h  sd_card.h  system_logic.h  trig.h
source/NUCLEO-F446RE_Gizmo/Drivers/Gizmo/Src/: ADXL345.c  LCD_driver.c  ST3020_servo.c  sd_card.c  system_logic.c  trig.c
source/NUCLEO-F446RE_Gizmo/Drivers/LCD_waveshare/LCD/: LCD.c  LCD.h
source/NUCLEO-F446RE_Gizmo/Gizmo_libs/Inc/: LCD_driver.h
source/NUCLEO-F446RE_Gizmo/Gizmo_libs/LCD_waveshare/LCD/: DEV_Config.c  DEV_Config.h
source/NUCLEO-F446RE_prototypes/: .cproject  .mxproject  .project  NUCLEO-F446RE_prototypes Debug.launch  NUCLEO-F446RE_prototypes.ioc
source/NUCLEO-F446RE_prototypes/Core/Inc/: ADXL345.h  ST3020_servo.h  can.h  error_codes.h  main.h  sd_card.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  trig.h
source/NUCLEO-F446RE_prototypes/Core/Src/: ADXL345.c  ST3020_servo.c  can.c  gpio.c  main.c  rtc.c  sd_card.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  trig.c  usart.c
source/NUCLEO-F446RE_prototypes/Core/User_libs/ControllerTech_Lib/: ST7735.h
source/NUCLEO-F446RE_prototypes/Core/User_libs/LCD/: DEV_Config.c  LCD_driver.c  LCD_driver.h
source/NUCLEO-F446RE_prototypes/Debug/: NUCLEO-F446RE_prototypes.elf  NUCLEO-F446RE_prototypes.list  NUCLEO-F446RE_prototypes.map  makefile  objects.list  sources.mk
source/NUCLEO-F446RE_prototypes/Debug/Core/Src/: ADXL345.cyclo  ADXL345.d  ADXL345.su  can.cyclo  can.d  can.su  gpio.d  main.cyclo  main.d  main.su  sdio.cyclo  sdio.d  sdio.su  spi.cyclo  spi.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d  trig.cyclo  trig.d  trig.su  usart.d
source/NUCLEO-F446RE_prototypes/Debug/Core/Startup/: subdir.mk
source/NUCLEO-F446RE_prototypes/Debug/FATFS/App/: fatfs.d
tests/: AllTests.c  CMakeLists.txt
tests/test_module/: CMakeLists.txt  test_module.c  test_module_runner.c
(+70 files in other folders)
